# stng

./: .gitignore  Cargo.toml  README.md
examples/: check_auto_detection.rs  check_extracted_strings.rs  check_key_extraction.rs  check_min_lengths.rs  compare_quality.rs  debug_filtering.rs  debug_kworker.rs  dump_brew_agent.rs  dump_brew_agent_filtered.rs  dump_brew_unfiltered_min4.rs  find_missing.rs  profile_brew_agent.rs  profile_detailed.rs  test_auto_detect_debug.rs  test_both_methods.rs  test_cycling_only.rs  test_desktop_extraction.rs  test_hex_minimal.rs  test_key_scoring.rs  test_kworker.rs  test_trim.rs
src/: binary.rs  binary_net.rs  common.rs  decoders.rs  detect.rs  entitlements.rs  error.rs  extraction.rs  fuzzy_base64.rs  go.rs  imports.rs  instr.rs  lib.rs  main.rs  overlay.rs  r2.rs  raw.rs  rust.rs  stack_strings.rs  types.rs  validation.rs  validation_thresholds.rs  xor.rs  xor.rs.bak2  xor.rs.bak3
src/go/: classifier.rs  extractor.rs  mod.rs
src/go/classifier/: code.rs  encoding.rs  mod.rs  network.rs
src/r2/: cache.rs
src/xor/: classify.rs  key.rs  mod.rs  scan.rs  validate.rs
testdata/: xor_useragent.go
testdata/kworker_samples/: README.md
testdata/malware/: kimwolf_installer  pondrat  poolrat  themeforestrat  vget_sample
testdata/xor/: brew_agent_xor_sample
tests/: cli_tests.rs  integration_tests.rs  test_byte_offsets.rs  test_classifier_security.rs  test_clean_binaries.rs  test_codesig_precision.rs  test_concatenation_deobfuscation.rs  test_crypto_wallet_extraction.rs  test_debug_extraction.rs  test_decoders.rs  test_detect.rs  test_double_obfuscation.rs  test_fuzzy_base64.rs  test_imports.rs  test_instruction_extraction.rs  test_kworker_obfuscation.rs  test_macho_codesig.rs  test_multibyte_xor.rs  test_overlay.rs  test_passwd_classification.rs  test_r2_cache.rs  test_r2_helpers.rs  test_rust_extraction.rs  test_stack_strings_poolrat.rs  test_stack_strings_react.rs  test_stack_strings_realworld.rs  test_stack_strings_vget.rs  test_stack_strings_xor_pairs.rs  test_text_decoding_improved.rs  test_text_file_decoding.rs  test_types.rs  test_validation_extended.rs  test_validation_special_cases.rs  test_wrapping_and_sorting.rs  test_xor_extraction.rs  test_xor_filtering.rs  test_xor_no_overlaps.rs  test_xor_realworld.rs
tests/fixtures/: README.md
tests/testdata/: hello_linux_amd64
