[package]
name = "stng"
version = "0.1.0"
edition = "2021"
authors = ["DISSECT Team"]
description = "Language-aware string extraction for Go and Rust binaries"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hex/stng"
keywords = ["binary", "strings", "go", "rust", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Binary parsing
goblin = "0.8"

# Pattern matching
regex = "1.11"

# Parallelism
rayon = "1.10"

# Fast byte scanning
memchr = "2.7"

# Multi-pattern matching
aho-corasick = "1.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization (for JSON output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding
base64 = "0.22"

# Error handling
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Logging (modern structured logging with tracing)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lib]
name = "stng"
path = "src/lib.rs"

[[bin]]
name = "stng"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
